# Phoenix-Protocol

./: .env  .gitignore  IMPLEMENTATION_UPDATES.md  INTEGRATION.md  README.md
backend/: .env.example  .gitignore  README.md  package.json
backend/src/: index.js
backend/src/config/: database.js  index.js
backend/src/contracts/: IntentRegistry.json  PhoenixProtocol.json  TokenVault.json
backend/src/controllers/: authController.js  intentController.js  recoveryController.js  transactionController.js  userController.js
backend/src/middleware/: auth.js  errorHandler.js  validator.js
backend/src/models/: Intent.js  RecoveryRequest.js  Transaction.js  User.js
backend/src/routes/: auth.js  index.js  intent.js  recovery.js  transaction.js  user.js
backend/src/utils/: blockchain.js  logger.js
cardano/: README.md
cardano/plutus/: phoenix-protocol.cabal
cardano/plutus/app/: Main.hs
cardano/plutus/src/: IntentRegistry.hs  RecoveryModule.hs
cardano/plutus/test/: Spec.hs
cardano/plutus/test/IntentRegistry/: Tests.hs
cardano/plutus/test/RecoveryModule/: Tests.hs
cardano/scripts/: deploy-contracts.sh  interact-with-contracts.sh  update-addresses.sh
contracts/: DEPLOYMENT.md  PROJECT_STATUS.md  README.md  TokenVault.sol  hardhat.config.js  package.json
contracts/contracts/: IntentRegistry.sol  PhoenixProtocol.sol  RecoveryModule.sol  TokenVault.sol
contracts/contracts/interfaces/: IIntentRegistry.sol  IRecoveryModule.sol  ITokenVault.sol
contracts/contracts/test/: MockERC20.sol
contracts/scripts/: approve-recovery.js  create-intent.js  deploy.js  execute-intent.js  execute-recovery.js  interact.js  request-recovery.js  verify.js
contracts/test/: PhoenixProtocol.test.js
docs/: CARDANO_INTEGRATION.md
frontend/: README.md  build.ps1  next.config.js  next.config.ts  package-lock.json  package.json  package.json.updated  tailwind.config.js  tailwind.config.js.updated
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: IMPROVEMENTS.md
frontend/src/app/: globals.css  globals.css.updated  i18n-config.ts  (+3 more)
frontend/types/: next-pwa.d.ts
scripts/: update-addresses.js
(+85 files in other folders)
