--- cardano/plutus/phoenix-protocol.cabal
+++ cardano/plutus/phoenix-protocol.cabal
@@ -0,0 +1,54 @@
+cabal-version:      3.0
+name:               phoenix-protocol
+version:            0.1.0.0
+synopsis:           Phoenix Protocol Cardano Implementation
+description:        Smart contract recovery and UX protection middleware for Cardano
+license:            Apache-2.0
+author:             Joseph Mwangi
+maintainer:         joseph@phoenixprotocol.com
+build-type:         Simple
+extra-doc-files:    CHANGELOG.md
+
+common warnings
+    ghc-options: -Wall
+
+library
+    import:           warnings
+    exposed-modules:  IntentRegistry
+                    , RecoveryModule
+    build-depends:    base ^>=4.14.1.0
+                    , aeson
+                    , bytestring
+                    , containers
+                    , cardano-api
+                    , cardano-crypto-class
+                    , cardano-ledger-core
+                    , cardano-ledger-shelley
+                    , cardano-wallet-core
+                    , data-default
+                    , plutus-core
+                    , plutus-ledger
+                    , plutus-ledger-api
+                    , plutus-tx
+                    , plutus-tx-plugin
+                    , plutus-script-utils
+                    , serialise
+                    , text
+    hs-source-dirs:   src
+    default-language: Haskell2010
+    ghc-options:      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
+
+executable compile-scripts
+    import:           warnings
+    main-is:          Main.hs
+    build-depends:    base ^>=4.14.1.0
+                    , phoenix-protocol
+                    , cardano-api
+                    , plutus-ledger-api
+                    , plutus-tx
+                    , bytestring
+                    , serialise
+                    , text
+    hs-source-dirs:   app
+    default-language: Haskell2010
+    ghc-options:      -threaded -rtsopts -with-rtsopts=-N